Fix testcases for PR c/78304
The testcases as written made assumptions about size_t and long
being invalid for use with "%u".

We only need some invalid type, so this patch converts them to
attempt a "const char *" with "%u", which should be invalid for
every target.

gcc/testsuite/ChangeLog:
	PR c/78304
	* gcc.dg/format/pr78304.c: Convert argument from integral type
	to a pointer.
	* gcc.dg/format/pr78304-2.c: Likewise.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244502 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-16  David Malcolm  <dmalcolm@redhat.com>
+
+	PR c/78304
+	* gcc.dg/format/pr78304.c: Convert argument from integral type
+	to a pointer.
+	* gcc.dg/format/pr78304-2.c: Likewise.
+
 2017-01-16  Carl Love  <cel@us.ibm.com>
 
 	* gcc.target/powerpc/builtins-3.c: New vec_nabs testcase.
