--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-16  Joseph Myers  <joseph@codesourcery.com>
+
+	* sv.po: Update.
+
 2017-01-15  Joseph Myers  <joseph@codesourcery.com>
 
 	* fr.po: Update.
