--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2017-01-16  Jeff Law  <law@redhat.com>
+
+	PR tree-optimization/79090
+	PR tree-optimization/33562
+	PR tree-optimization/61912
+	PR tree-optimization/77485
+	* tree-ssa-dse.c (compute_trims): Accept STMT argument.  Dump STMT
+	and computed trims into the dump file.
+
 2017-01-17  Uros Bizjak  <ubizjak@gmail.com>
 
 	* config/i386/i386.h (LIMIT_RELOAD_CLASS): Remove.
