--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-16  Martin Sebor  <msebor@redhat.com>
+
+	PR tree-optimization/78608
+	* gimple-ssa-sprintf.c (tree_digits): Avoid negating TYPE_MIN.
+
 2017-01-16  Jeff Law  <law@redhat.com>
 
 	Revert:
