--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-17  Kaz Kojima  <kkojima@gcc.gnu.org>
+
+	PR target/78633
+	* config/sh/sh.md (cmpeqsi_t+1): Call copy_rtx to avoid invalid
+	RTL sharing.
+
 2017-01-17  Alan Modra  <amodra@gmail.com>
 
 	PR target/79066
