* gcc_update: Remove entries related to GCJ and libgcj. 	Complete copyright years and adjust my e-mail address.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244518 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-17  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* gcc_update: Remove entries related to GCJ and libgcj.
+	Complete copyright years and adjust my e-mail address.
+
 2017-01-11  Richard Earnshaw  <rearnsha@arm.com>
 
 	* gcc_update: Adjust touch list for ARM.
