--- a/libgomp/ChangeLog
+++ b/libgomp/ChangeLog
@@ -1,5 +1,33 @@
 2017-01-17  Jakub Jelinek  <jakub@redhat.com>
 
+	* plugin/configfrag.ac: For --without-cuda-driver don't initialize
+	CUDA_DRIVER_INCLUDE nor CUDA_DRIVER_LIB.  If both
+	CUDA_DRIVER_INCLUDE and CUDA_DRIVER_LIB are empty and linking small
+	cuda program fails, define PLUGIN_NVPTX_DYNAMIC to 1 and use
+	plugin/include/cuda as include dir and -ldl instead of -lcuda as
+	library to link ptx plugin against.
+	* plugin/plugin-nvptx.c: Include dlfcn.h if PLUGIN_NVPTX_DYNAMIC.
+	(CUDA_CALLS): Define.
+	(cuda_lib, cuda_lib_inited): New variables.
+	(init_cuda_lib): New function.
+	(CUDA_CALL_PREFIX): Define.
+	(CUDA_CALL_ERET, CUDA_CALL_ASSERT): Use CUDA_CALL_PREFIX.
+	(CUDA_CALL): Use FN instead of (FN).
+	(CUDA_CALL_NOCHECK): Define.
+	(cuda_error, fini_streams_for_device, select_stream_for_async,
+	nvptx_attach_host_thread_to_device, nvptx_open_device, link_ptx,
+	event_gc, nvptx_exec, nvptx_async_test, nvptx_async_test_all,
+	nvptx_wait_all, nvptx_set_clocktick, GOMP_OFFLOAD_unload_image,
+	nvptx_stacks_alloc, nvptx_stacks_free, GOMP_OFFLOAD_run): Use
+	CUDA_CALL_NOCHECK.
+	(nvptx_init): Call init_cuda_lib, if it fails, return false.  Use
+	CUDA_CALL_NOCHECK.
+	(nvptx_get_num_devices): Call init_cuda_lib, if it fails, return 0.
+	Use CUDA_CALL_NOCHECK.
+	* plugin/cuda/cuda.h: New file.
+	* config.h.in: Regenerated.
+	* configure: Regenerated.
+
 	PR other/79046
 	* configure.ac: Add GCC_BASE_VER.
 	* Makefile.am (gcc_version): Use @get_gcc_base_ver@ instead of cat to
