--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-17  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/tree-ssa/ssa-dse-2.C (size_t): Typedef to __SIZE_TYPE__
+	rather than long unsigned int.
+	* g++.dg/tree-ssa/ssa-dom.C: Likewise.
+
 2017-01-17  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/71433
