PR middle-end/77445 	* tree-ssa-threadupdate.c (remove_ctrl_stmt_and_useless_edges): 	correctly set frequency of oudgoing edge. 	(duplicate_thread_path): Fix profile updating. 	* gcc.dg/tree-ssa/pr77445-2.c: New testcase. 	* gcc.dg/tree-ssa/pr77445.c: New testcase.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244528 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-17  Jan Hubicka  <hubicka@ucw.cz>
+
+	PR middle-end/77445
+	* tree-ssa-threadupdate.c (remove_ctrl_stmt_and_useless_edges):
+	correctly set frequency of oudgoing edge.
+	(duplicate_thread_path): Fix profile updating.
+
 2017-01-17  Jakub Jelinek  <jakub@redhat.com>
 
 	PR other/79046
