Fix wording of -Wmisleading-indentation (PR c++/71497)
gcc/c-family/ChangeLog:
	PR c++/71497
	* c-indentation.c (warn_for_misleading_indentation): Use the past
	subjunctive in the note.

gcc/testsuite/ChangeLog:
	PR c++/71497
	* c-c++-common/Wmisleading-indentation-3.c: Update wording of
	expected messages.
	* c-c++-common/Wmisleading-indentation.c: Likewise.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244536 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-family/ChangeLog
+++ b/gcc/c-family/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-17  David Malcolm  <dmalcolm@redhat.com>
+
+	PR c++/71497
+	* c-indentation.c (warn_for_misleading_indentation): Use the past
+	subjunctive in the note.
+
 2017-01-17  Aldy Hernandez  <aldyh@redhat.com>
 
 	PR c/79116
