--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-17  Nathan Sidwell  <nathan@acm.org>
+
+	PR c++/61636
+	* g++.dg/cpp1y/pr61636-1.C: New.
+	* g++.dg/cpp1y/pr61636-2.C: New.
+	* g++.dg/cpp1y/pr61636-3.C: New.
+
 2017-01-17  Martin Sebor  <msebor@redhat.com>
 
 	PR testsuite/79115
@@ -214,6 +221,7 @@
 
 	PR target/79004
 	* gcc.target/powerpc/pr79004.c: New test.
+
 2017-01-12  Martin Sebor  <msebor@redhat.com>
 
 	* gcc.dg/pr78138.c: Adjust.
