--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-17  Segher Boessenkool  <segher@kernel.crashing.org>
+
+	PR target/78875
+	* gcc.target/powerpc/ssp-1.c: New testcase.
+	* gcc.target/powerpc/ssp-2.c: New testcase.
+
 2017-01-17  Wilco Dijkstra  <wdijkstr@arm.com>
 
 	* gcc.target/aarch64/eh_return.c: New test.
