--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-17  Joshua Conner  <joshconner@google.com>
+
+	* crossconfig.m4: Add fuchsia OS.
+	* configure: Regenerate. 
+
 2017-01-17  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR libstdc++/69699
