libgcc/ 	* config/msp430/t-msp430 (LIB2ADD): Remove mpy.c 	(mpy.o): New rule. 	(libmul_none.a): Add mpy.o
	gcc/testsuite/
	* gcc.target/msp430/mul_f5_muldef.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244564 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-17  Joe Seymour  <joe.s@somniumtech.com>
+
+	* gcc.target/msp430/mul_f5_muldef.c: New test.
+
 2017-01-17  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	PR target/79004
