Fix number of occurrences.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244569 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2017-01-18  Markus Trippelsdorf  <markus@trippelsdorf.de>
 
+	* doc/invoke.texi (fabi-version): Correct number of occurrences.
+
+2017-01-18  Markus Trippelsdorf  <markus@trippelsdorf.de>
+
 	* doc/invoke.texi (fabi-version): Spelling fix.
 
 2017-01-18  Markus Trippelsdorf  <markus@trippelsdorf.de>
