MIPS: Fix generation of Loongson-specific division and modulo instructions.
gcc

	* config/mips/mips.h (ISA_HAS_DIV3): Remove unused macro.
	(ISA_AVOID_DIV_HILO): New macro.
	(ISA_HAS_DIV): Use new ISA_AVOID_DIV_HILO macro.
	(ISA_HAS_DDIV): Likewise.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244570 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-18  Toma Tabacu  <toma.tabacu@imgtec.com>
+
+	* config/mips/mips.h (ISA_HAS_DIV3): Remove unused macro.
+	(ISA_AVOID_DIV_HILO): New macro.
+	(ISA_HAS_DIV): Use new ISA_AVOID_DIV_HILO macro.
+	(ISA_HAS_DDIV): Likewise.
+
 2017-01-18  Markus Trippelsdorf  <markus@trippelsdorf.de>
 
 	* doc/invoke.texi (fabi-version): Correct number of occurrences.
