* gcc.target/s390/target-attribute/tattr-2.c: Add -fno-ipa-icf 	to dg-options. 	(p0): Add missing dg-error.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244571 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-18  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.target/s390/target-attribute/tattr-2.c: Add -fno-ipa-icf
+	to dg-options.
+	(p0): Add missing dg-error.
+
 2017-01-18  Toma Tabacu  <toma.tabacu@imgtec.com>
 
 	* config/mips/mips.h (ISA_HAS_DIV3): Remove unused macro.
