PR c++/79091 	* mangle.c (write_exception_spec): Check nothrow explicitly. 	(write_encoding): Don't increment processing_template_decl around 	encoding.
	PR c++/79091
	* g++.dg/pr79091.C: New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244575 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-18  Nathan Sidwell  <nathan@acm.org>
+
+	PR c++/79091
+	* mangle.c (write_exception_spec): Check nothrow explicitly.
+	(write_encoding): Don't increment processing_template_decl around
+	encoding.
+
 2017-01-18  Markus Trippelsdorf  <markus@trippelsdorf.de>
 
 	PR c++/70182
